--- a/css/style.css
+++ b/css/style.css
@@ -196,5 +196,6 @@ input[type="submit"]:hover{
     margin-top: 20px;
 }
 footer{
-   margin-bottom: 0px;
+   margin-bottom: 0%;
+   padding-bottom: 0%;
 }
